# workflow-automation-tool-loadtest

./: .gitignore  Makefile  README.md  constant.py  example.env  loadtest.py  pyproject.toml
dify/: .env  decode_korean.py  pdf chat.yml
langchain/: config.py  main.py
langchain/rag/: __init__.py  base.py  pdf.py
n8n/: pdf_agent.json  pdf_chat.json
