[project]
name = "workflow-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==0.3.20",
    "langchain-community>=0.0.21",
    "ollama>=0.1.6",
    "requests>=2.31.0",
    "chromadb>=0.4.24",
    "langchain-chroma>=0.2.2",
    "pdfplumber==0.11.5",
    "rank-bm25==0.2.2",
    "uvicorn==0.34.0",
    "locust>=2.11.1",
    "qdrant-client>=1.8.2",
    "langchain-ollama==0.3.2",
]
